mise en forme du bot et ajout de la scroll bar, mais bug d'alignement

--- a/src/app/chatbot/chatbot.component.css
+++ b/src/app/chatbot/chatbot.component.css
@@ -1,8 +1,5 @@
 /* Container de tous les éléments du chatbot */
 .chatbot-container {
-  display: flex;
-  flex-direction: column;
-  
   position: fixed;
 
   width: 400px;
@@ -31,51 +28,42 @@
 }
 
 .chatbot-title{
-  background: linear-gradient(to bottom, black, black, black, black, black, transparent);
   position: fixed;
+  z-index: 2;
+  background: linear-gradient(to bottom, black, black, black, black, black, transparent);
   height: 40px;
   width: 100%;
   border-radius: 18px 0px 0px 0px;
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   color: white;
 }
 
 .chatbot-messages-container{
+  position: absolute;
+  z-index: 1;
+  width: calc(100% - 10px);
+  max-height: calc(100% - 65px);
+  margin: 30px 5px 35px 5px;
   overflow-y: auto;
-  overflow-x: hidden;
-  order: 1;
-  flex-grow: 1;
-  margin-left : 5px;
-  margin-right : 5px;
-  margin-bottom : 5px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-
+  bottom: 0;
 }
 
 .chatbot-messages {
-  display: flex;
-  flex-direction: column-reverse;
+  margin-top: 5px;
 }
 
 .message {
-  margin-top: 5px;
+  word-wrap: break-word;
+  display: inline-block;
   padding: 2px 5px 2px 5px;
+
 }
 .user-message {
   border-radius: 15px 15px 15px 0 ;
-  align-self: flex-start;
   background-color: #a1a1a1d5;
 }
 .chatbot-message {
   border-radius: 15px 15px 0 15px ;
-  align-self: flex-end;
   background-color: #199ce2d5;
 }
 
@@ -84,9 +72,10 @@
 
 /* Container de la saisie de messages, se trouve à l'intérieur du chatbot-container */
 .chatbot-input {
-  display: flex;
-  order: 2;
+  position: fixed;
+  width: 100%;
   height: 30px;
+  bottom: 0px;
   opacity: 0;
   transform: translateX(100%);
   transition: opacity 0.3s, transform 0.3s;
@@ -95,21 +84,24 @@
   opacity: 1;
   transform: translateX(0);
 }
-.chatbot-input-send {
-  background-image:url('../../assets/send.png');
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 30px;
-  height: 30px;
-  border: 0px;
-}
 .chatbot-input-text {
-  width: 100%;
+  position: fixed;
+  width: calc(100% - 30px - 15px);
   height: 27px;
   padding-left: 10px;
   border: 1px solid gray;
   border-radius: 0px 0px 0px 18px;
+}
+.chatbot-input-send {
+  position: fixed;
+  background-image:url('../../assets/send.png');
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: calc(100% - 30px);
+  width: 30px;
+  height: 30px;
+  border: 0px;
 }
 
 
